<resources>
    <string name="app_name">lorenaApp</string>
    <string name="welcome_message">WELCOME!!!</string>
    <string name="button_login_text">LOGIN</string>
    <string name="button_signup_text">REGISTRATION</string>
    <string name="button_register_text">CREATE ACCOUNT</string>
    <string name="button_cancel_text">CANCEL</string>
    <string name="placeholder_login_name">name</string>
    <string name="placeholder_login_surname">surname</string>
    <string name="placeholder_login_email">e-mail</string>
    <string name="placeholder_login_password">password</string>
    <string name="placeholder_login_repeat_password">repeat the password</string>
    <string name="authentication_error_message">Password is incorrect</string>
    <string name="incorrect_email_message">Email address is incorrect</string>
    <string name="welcome_app_message">Welcome to lorenaApp</string>
    <string name="empty_fields_message">Email Address or Password can not be empty</string>
    <string name="register_complete_message">Registration complete</string>
    <string name="register_empty_fields_message">Can not have empty fields</string>
    <string name="register_error_email_message">Introduce a valid email</string>
    <string name="register_error_password_message">The repeated password does not match</string>
    <string name="no_registration_message">The email address does not exist. Do your registration</string>
    <string name="email_request_message">Send me this information</string>
    <string name="email_sent_message">Your data was sent by email</string>
    <string name="email_error_message">There was a problem sending the email</string>
    <string name="error_contact_api_data">An error occurred while contacting the server</string>
    <string name="button_select_avatar">SELECT AVATAR</string>
    <string name="title_avatar_selection">SELECT AN AVATAR:</string>
    <string name="button_avatar_details">DETAILS</string>
    <string name="button_avatar_apply">APPLY</string>
    <string name="button_logout">LOGOUT</string>
    <string name="button_weather">WEATHER</string>
    <string name="button_counter">COUNTER</string>
    <string name="button_exercises">EXERCISES</string>

    <string name="title_exercises_selection">LIST OF AVAILABLE EXERCISES:</string>

    <string name="user_settings">User Settings</string>
    <string name="next_view">more details in new view</string>
    <string name="changes_applied">Changes applied successfully</string>
    <string name="button_save_avatar">RETURN</string>
    <string name="button_reset_counter">RESET</string>

    <string name="info_total_steps">Total Steps</string>
    <string name="zero_float">0.0</string>
    <string name="zero_int">0</string>
    <string name="info_distance">Distance</string>
    <string name="info_calories">Calories</string>
    <string name="connection_failed">Google Connection Failed</string>
    <string name="connection_not_available">the authentication is not available</string>

    <string name="facebook_app_id">501219354048028</string> <string name="fb_login_protocol_scheme">fb501219354048028</string>


</resources>
