<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.lorenaApp"
    android:paddingTop="@dimen/padding_top_register"
    tools:context="activity.RegistrationActivity" >

    <EditText
        android:id="@+id/et_name"
        style="@style/EditTextStyle"
        android:hint="@string/placeholder_login_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_surname"
        style="@style/EditTextStyle"
        android:hint="@string/placeholder_login_surname"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_email"
        style="@style/EditTextStyle"
        android:hint="@string/placeholder_login_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        style="@style/EditTextStyle"
        android:hint="@string/placeholder_login_password"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/et_password2"
        style="@style/EditTextStyle"
        android:hint="@string/placeholder_login_repeat_password"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/btn_enter_register"
        style="@style/ButtonStyle"
        android:text="@string/button_register_text" />

    <CheckBox android:id="@+id/checkbox_mail"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/email_request_message"
        android:textSize="@dimen/font_size_button" />

    <Button
        android:id="@+id/btn_cancel_register"
        style="@style/ButtonStyle"
        android:text="@string/button_cancel_text" />
</LinearLayout>