<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.LoginActivity"
    style="@style/AppTheme.lorenaApp"
    android:paddingTop="@dimen/padding_top_login" >

    <EditText
        android:id="@+id/et_email"
        android:hint="@string/placeholder_login_email"
        style="@style/EditTextStyle"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/placeholder_login_password"
        style="@style/EditTextStyle"
        android:inputType="numberPassword"/>

    <Button
        android:id="@+id/btn_enter_login"
        style="@style/ButtonStyle"
        android:text="@string/button_login_text"/>

    <Button
        android:id="@+id/btn_cancel_login"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/separate_between_buttons_main_screen"
        android:text="@string/button_cancel_text"/>

</LinearLayout>