<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.lorenaApp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WelcomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margen_img_avatar"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_user"
            android:background="@drawable/undefined"
            android:layout_width="@dimen/width_img_avatar_dialog"
            android:layout_height="@dimen/height_img_avatar_dialog" />

        <TextView
            android:id="@+id/et_email_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black_color"
            android:textSize="@dimen/font_size_welcome_screen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="@dimen/width_options_welcome_screen"
        android:layout_height="@dimen/height_options_welcome_screen"
        android:gravity="center"
        android:id="@+id/weather_button"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/weather_info_icon"
            android:background="@drawable/wheater_icon"
            android:layout_width="@dimen/icons_welcome_screen"
            android:layout_height="@dimen/icons_welcome_screen" />

        <TextView
            android:id="@+id/weather_info_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_weather"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black_color"
            android:textSize="@dimen/font_size_welcome_screen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/width_options_welcome_screen"
        android:layout_height="@dimen/height_options_welcome_screen"
        android:gravity="center"
        android:id="@+id/exercise_button"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/exercise_info_icon"
            android:background="@drawable/icon_workout"
            android:layout_width="@dimen/icons_welcome_screen"
            android:layout_height="@dimen/icons_welcome_screen" />

        <TextView
            android:id="@+id/exercise_info_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_exercises"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black_color"
            android:textSize="@dimen/font_size_welcome_screen" />
    </LinearLayout>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/width_options_welcome_screen"
            android:layout_height="@dimen/height_options_welcome_screen"
            android:gravity="center"
            android:id="@+id/counter_button"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/more_info_icon"
                android:background="@drawable/more_icon"
                android:layout_width="@dimen/icons_welcome_screen"
                android:layout_height="@dimen/icons_welcome_screen" />

            <TextView
                android:id="@+id/more_info_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_counter"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black_color"
                android:textSize="@dimen/font_size_welcome_screen" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/width_options_welcome_screen"
            android:layout_height="@dimen/height_options_welcome_screen"
            android:gravity="center"
            android:id="@+id/btn_logout"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logout_icon"
                android:background="@drawable/logout_128"
                android:layout_width="@dimen/icons_welcome_screen"
                android:layout_height="@dimen/icons_welcome_screen" />

            <TextView
                android:id="@+id/logout_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_logout"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black_color"
                android:textSize="@dimen/font_size_welcome_screen" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>